This commit adds the styling to the success.hbs file when a form is submitted

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -16,26 +16,14 @@
     <body>
 
 
-<div class="container-fluid">
-    <div class="row header">
-        <div class="col-md-6">
-            <a href="/"><p id="logo">WildLife Tracker</p></a>
-        </div>
-        <div class="col-md-6 button-section">
-            <a href="/"><p id="add">Add New</p></a>
-            <a href="/animals">
-                <button class="btn btn-all-animals">All Animals</button>
-            </a>
-        </div>
-    </div>
-</div>
+
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
 
         <a href="/" class="text-logo">WildLife Monitor</a>
 
         <a href="/animals/new" class="text">Add New Sighting</a>
-        <a href="/" class="text">All Animals List</a>
+        <a href="/animals" class="text">All Animals List</a>
 
 
     </nav>
