--- a/src/main/resources/templates/animal-form.hbs
+++ b/src/main/resources/templates/animal-form.hbs
@@ -10,40 +10,44 @@
         <form action="/animals/new" method="post">
             <div class="form-group">
                 <input name="animal" type="text" id="animal" class="form-control"
-                       placeholder="Name Of Animal...">
+                       placeholder="Name Of Animal..." required>
             </div>
             <div class="form-group">
-                <select name="danger" id="danger" class="form-control">
+                <select name="danger" id="danger" class="form-control" required>
+                    <option value="">Is the animal endangered?</option>
                     <option value="endangered">Endangered</option>
                     <option value="not-endangered">Not Endangered</option>
                 </select>
             </div>
             <div class="form-group">
-                <select name="health" id="health" class="form-control">
+                <select name="health" id="health" class="form-control" required>
+                    <option value=""> What is the health status of the animal?</option>
                     <option value="healthy">Healthy</option>
                     <option value="ill">Ill</option>
                     <option value="okay">Okay</option>
                 </select>
             </div>
             <div class="form-group">
-                <select name="age" id="age" class="form-control">
+                <select name="age" id="age" class="form-control" required>
+                    <option value="">What is the age of the animal?</option>
                     <option value="newborn">Newborn</option>
                     <option value="young">Young</option>
                     <option value="adult">Adult</option>
                 </select>
             </div>
             <div class="form-group">
-                <select name="location" id="location" class="form-control">
-                    <option value="zone-a">Zone A(Samburu)</option>
-                    <option value="zone-b">Zone B(Mara)</option>
-                    <option value="zone-c">Zone C(Amboseli)</option>
+                <select name="location" id="location" class="form-control" required>
+                    <option value="">What is the location spotted?</option>
+                    <option value="Athi River">Athi River</option>
+                    <option value="Voi">Voi</option>
+                    <option value="Taita Taveta">Taita Taveta</option>
                 </select>
             </div>
             <div class="form-group">
                 <input name="ranger" type="text" id="ranger" class="form-control"
-                       placeholder="Name Of Ranger...">
+                       placeholder="Name Of Ranger..." required>
             </div>
-            <button type="submit" class="btn btn-submit">Submit</button>
+            <button type="submit" class="btn btn-submit btn-primary">Submit</button>
         </form>
 
     </div>
