--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,18 +1,16 @@
-{{#partial "styles"}}
-    <link rel="stylesheet" href="/css/success.css">
-{{/partial}}
+
 
 {{#partial "content"}}
     <div class="container-fluid">
         <div class="row success-parent-container">
             <div class="col-md-6 success-child-container">
-                <p id="heading-success">Your Submission has been recorded</p>
+                <p id="heading-success">You have successfully submitted the form</p>
                 <div class="buttons">
                     <a href="/">
-                        <button class="btn add-new">Add New</button>
+                        <button class="btn btn-primary">Add New</button>
                     </a>
                     <a href="/animals">
-                        <button class="btn add-new">All Animals</button>
+                        <button class="btn btn-primary">All Animals</button>
                     </a>
                 </div>
             </div>
