This commit adds the created field to the animal constructor

--- a/src/main/resources/templates/animals.hbs
+++ b/src/main/resources/templates/animals.hbs
@@ -5,6 +5,9 @@
 {{#partial "content"}}
     <div class="container-fluid">
         <div class="row success-parent-container">
+            <div class="col-md-6">
+                <img style="position: fixed;" src="https://cdn.pixabay.com/photo/2017/05/31/18/38/sea-2361247__340.jpg" alt="fox">
+            </div>
             <div class="col-md-6 success-child-container">
                 <p id="heading-animals">All Animals</p>
                 {{#if animals}}
@@ -16,24 +19,27 @@
                             <li>Age: <span id="value">  {{age}}</span></li>
                             <li>Location Spotted: <span id="value">{{location}}</span><span id="value"></span></li>
                             <p id="ranger">Submited by: <span id="value">{{ranger}}</p>
+                            <p>Created At:{{created}}</p>
                         </ul>
                     {{/each}}
                     <div class="buttons">
-                        <a href="/">
-                            <button class="btn add-new-success">Make Another Submission</button>
+                        <a href="/animals/new">
+                            <button class="btn btn-primary">Make Another Submission</button>
                         </a>
+                        <a href="/animals/delete"><button class="btn btn-danger">Delete All</button></a>
                     </div>
                 {{else}}
                     <p>No Animal found in records</p>
                     <a href="/">
-                        <button class="btn add-new-success">Add a New Submittion</button>
+                        <button class="btn btn-primary">Add a New Submission</button>
                     </a>
+
                 {{/if}}
             </div>
-            <div class="col-md-6 img-success">
-                <img src="/images/penguin.png" alt="fox">
-            </div>
+
         </div>
+    </div>
+
     </div>
 {{/partial}}
 
