--- a/src/main/resources/templates/success-delete.hbs
+++ b/src/main/resources/templates/success-delete.hbs
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row success-parent-container">
             <div class="col-md-6 success-child-container">
-                <p id="heading-success">You have successfully submitted the form</p>
+                <p id="heading-success">You have successfully deleted the entries</p>
                 <div class="buttons">
                     <a href="/animals/new">
                         <button class="btn btn-primary">Add New</button>
