This commit adds the time field to each sighting submitted

--- a/src/main/resources/templates/animals.hbs
+++ b/src/main/resources/templates/animals.hbs
@@ -18,8 +18,8 @@
                             <li>Health: <span id="value">  {{health}}</span></li>
                             <li>Age: <span id="value">  {{age}}</span></li>
                             <li>Location Spotted: <span id="value">{{location}}</span><span id="value"></span></li>
-                            <p id="ranger">Submited by: <span id="value">{{ranger}}</p>
-                            <p>Created At:{{created}}</p>
+                            <p id="ranger">Submitted by: <span id="value">{{ranger}}</p>
+                            <p id="ranger">Submitted At: <span id="value">{{created}}</p>
                         </ul>
                     {{/each}}
                     <div class="buttons">
